syntax = "proto3";

package canvaschain.symphony.governance.v1;

// ===================================================================================
// CanvasChain Symphony – Governance Protocol Buffers
//
// This file defines the cross-service Governance gRPC/Protobuf definitions used by
// CanvasChain Symphony micro-services.  The governance module orchestrates proposal
// submission, on-chain voting, tallying, and execution.  All creative “movements”
// (e.g. on-chain art updates, royalty-stream parameter changes, cryptographic curve
// migrations) flow through this governance layer.
// ===================================================================================

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// -----------------------------------------------------------------------------
// Enumerations
// -----------------------------------------------------------------------------

// Current status of a proposal.
enum ProposalStatus {
    PROPOSAL_STATUS_UNSPECIFIED = 0;
    PROPOSAL_STATUS_SUBMITTED   = 1; // Submitted but not yet open for voting.
    PROPOSAL_STATUS_ACTIVE      = 2; // Voting period is active.
    PROPOSAL_STATUS_PASSED      = 3; // Sufficient YES votes reached quorum.
    PROPOSAL_STATUS_REJECTED    = 4; // Vote finished without passing criteria.
    PROPOSAL_STATUS_EXECUTED    = 5; // Successfully executed.
    PROPOSAL_STATUS_FAILED      = 6; // Execution failed (tx reverted, etc.).
    PROPOSAL_STATUS_EXPIRED     = 7; // Voting period expired without quorum.
}

// Supported vote options.
enum VoteOption {
    VOTE_OPTION_UNSPECIFIED = 0;
    VOTE_OPTION_YES         = 1;
    VOTE_OPTION_NO          = 2;
    VOTE_OPTION_ABSTAIN     = 3;
    VOTE_OPTION_VETO        = 4; // Strong negative signal, may burn stake.
}

// -----------------------------------------------------------------------------
// Core Data Structures
// -----------------------------------------------------------------------------

// Generic on-chain governance proposal.
message Proposal {
    uint64                     id                  = 1;  // Unique proposal id.
    string                     title               = 2;  // Human-readable summary.
    string                     description         = 3;  // Markdown-compatible body.
    google.protobuf.Any        payload             = 4;  // Domain-specific execution msg.
    string                     proposer_address    = 5;  // Bech32 / ss58 encoded addr.
    google.protobuf.Timestamp  submit_time         = 6;  // Block timestamp.
    google.protobuf.Timestamp  voting_start_time   = 7;  // When voting becomes active.
    google.protobuf.Timestamp  voting_end_time     = 8;  // When voting closes.
    ProposalStatus             status              = 9;  // Current lifecycle status.
    uint32                     total_deposit       = 10; // Escrowed staking tokens.
    google.protobuf.Any        metadata            = 11; // Arbitrary extra data.
}

// Weighted vote option (e.g. 0.7 YES, 0.3 NO).
message WeightedVoteOption {
    VoteOption option  = 1;
    string     weight  = 2; // Decimal string, e.g. "0.700000000000000000".
}

// A single ballot cast by a voter.
message Vote {
    uint64                     proposal_id         = 1;
    string                     voter_address       = 2;
    repeated WeightedVoteOption options            = 3;
    google.protobuf.Timestamp  submit_time         = 4;
    google.protobuf.Any        metadata            = 5;
}

// Pagination information.
message PageRequest {
    uint64 offset = 1; // Index of the first item to return.
    uint64 limit  = 2; // Maximum number of items to return.
}

message PageResponse {
    uint64 total = 1; // Total number of items available.
}

// -----------------------------------------------------------------------------
// Queries
// -----------------------------------------------------------------------------

// Request to retrieve a list of proposals.
message QueryProposalsRequest {
    ProposalStatus status      = 1;
    PageRequest    pagination  = 2;
}

// Response containing proposals.
message QueryProposalsResponse {
    repeated Proposal proposals  = 1;
    PageResponse      pagination = 2;
}

// Request to fetch a single proposal by id.
message QueryProposalRequest {
    uint64 id = 1;
}

message QueryProposalResponse {
    Proposal proposal = 1;
}

// Request to fetch all votes for a proposal.
message QueryVotesRequest {
    uint64      proposal_id = 1;
    PageRequest pagination  = 2;
}

message QueryVotesResponse {
    repeated Vote votes      = 1;
    PageResponse pagination  = 2;
}

// -----------------------------------------------------------------------------
// Transactions / Mutations
// -----------------------------------------------------------------------------

// Submit a new proposal.
message SubmitProposalRequest {
    string                  title               = 1;
    string                  description         = 2;
    google.protobuf.Any     payload             = 3;
    string                  proposer_address    = 4;
    uint32                  initial_deposit     = 5;
    google.protobuf.Any     metadata            = 6;
}

message SubmitProposalResponse {
    Proposal proposal = 1;
}

// Cast a vote on an active proposal.
message CastVoteRequest {
    uint64                     proposal_id   = 1;
    string                     voter_address = 2;
    repeated WeightedVoteOption options      = 3;
    google.protobuf.Any        metadata      = 4;
}

message CastVoteResponse {
    Vote vote = 1;
}

// -----------------------------------------------------------------------------
// Governance gRPC Service
// -----------------------------------------------------------------------------

service GovernanceService {

    // -----------------------------
    // Query end-points (readonly)
    // -----------------------------
    rpc QueryProposals (QueryProposalsRequest) returns (QueryProposalsResponse) {
        option (google.api.http) = {
            get: "/v1/governance/proposals"
        };
    }

    rpc QueryProposal (QueryProposalRequest) returns (QueryProposalResponse) {
        option (google.api.http) = {
            get: "/v1/governance/proposals/{id}"
        };
    }

    rpc QueryVotes (QueryVotesRequest) returns (QueryVotesResponse) {
        option (google.api.http) = {
            get: "/v1/governance/proposals/{proposal_id}/votes"
        };
    }

    // -----------------------------
    // Transaction end-points
    // -----------------------------
    rpc SubmitProposal (SubmitProposalRequest) returns (SubmitProposalResponse) {
        option (google.api.http) = {
            post: "/v1/governance/proposals"
            body: "*"
        };
    }

    rpc CastVote (CastVoteRequest) returns (CastVoteResponse) {
        option (google.api.http) = {
            post: "/v1/governance/proposals/{proposal_id}/votes"
            body: "*"
        };
    }
}