syntax = "proto3";

package ccs.marketplace.v1;

// CanvasChain Symphony – Marketplace gRPC definitions
//
// This file defines the public gRPC contract for the Marketplace
// micro-service.  It is used by mobile wallets, web dApps and the
// internal orchestration layer.  All monetary values are expressed as
// unsigned 128-bit integers in the smallest denomination (e.g. wei, λ).
//
// NOTE: Never make breaking changes to published fields.  Use field
// reservations and versioned packages instead.

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace   = "CanvasChain.Marketplace.V1";
option go_package         = "github.com/canvaschain/symphony/ccs_proto/gen/marketplace;marketplacepb";
option java_multiple_files = true;
option java_outer_classname = "MarketplaceProto";
option objc_class_prefix  = "CCSMarketplace";
option php_namespace      = "CanvasChain\\Marketplace\\V1";

//--------------------------------------------------------------------
// ENUMS
//--------------------------------------------------------------------

enum Currency {
  // Default / unknown currency.
  CURRENCY_UNSPECIFIED = 0;
  // Native CanvasChain token (e.g. CCS).
  CURRENCY_NATIVE      = 1;
  // ERC-20 compatible staking token (e.g. NOTE).
  CURRENCY_STAKING     = 2;
  // Stable-coin bridged from Cosmos zone (e.g. axlUSDC).
  CURRENCY_STABLE      = 3;
}

// Built-in reason codes for a listing termination.
enum CloseReason {
  CLOSE_REASON_UNSPECIFIED = 0;
  CLOSE_REASON_CANCELLED   = 1;  // Seller cancelled before any match.
  CLOSE_REASON_SOLD        = 2;  // Listing sold via buy-now or accepted bid.
  CLOSE_REASON_EXPIRED     = 3;  // Listing expired naturally.
}

//--------------------------------------------------------------------
// COMMON TYPES
//--------------------------------------------------------------------

message Money {
  // Amount in smallest denomination (unsigned 128-bit).
  uint64 high = 1;  // high 64 bits
  uint64 low  = 2;  // low  64 bits
  Currency currency = 3;
}

message Pagination {
  uint32 limit  = 1;
  google.protobuf.StringValue cursor = 2; // Opaque, RFC-4648 base64.
}

message PaginationResult {
  google.protobuf.StringValue next_cursor = 1;
  uint32 total_count = 2; // Optional total, may be 0 if disabled.
}

// Key/value metadata for custom marketplace extensions (royalties, splits).
message Attributes {
  map<string, google.protobuf.Any> fields = 1;
}

//--------------------------------------------------------------------
// NFT REFERENCE
//--------------------------------------------------------------------

message NftId {
  string contract_address = 1;  // E.g. bech32 / hex.
  string token_id         = 2;  // 256-bit id as decimal string.
}

//--------------------------------------------------------------------
// LISTINGS
//--------------------------------------------------------------------

// An on-chain listing advertised by a seller.
message Listing {
  string listing_id = 1;                 // UUIDv7 for UX, unique per chain.
  NftId  nft        = 2;
  string seller     = 3;                 // Chain address of seller.
  Money  ask_price  = 4;                 // If zero, listing is “auction-only”.
  repeated Bid bids = 5;                 // Snapshot, omitted in pagination.
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp expires_at = 7; // 0 = never
  bool   is_active  = 8;
  Attributes meta   = 9;                 // Custom extension data.
  reserved 10 to 15;
}

//--------------------------------------------------------------------
// BIDS
//--------------------------------------------------------------------

message Bid {
  string bid_id    = 1;  // UUIDv7
  string listing_id = 2;
  string bidder     = 3; // Chain address of bidder.
  Money  amount     = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp expires_at = 6; // Bids can expire.
}

//--------------------------------------------------------------------
// EVENTS (STREAMING)
//--------------------------------------------------------------------

message TradeEvent {
  oneof payload {
    ListingCreated created  = 1;
    ListingClosed  closed   = 2;
    BidPlaced      bid      = 3;
    BidAccepted    accepted = 4;
  }

  google.protobuf.Timestamp timestamp = 10;
}

message ListingCreated {
  Listing listing = 1;
}

message ListingClosed {
  string listing_id = 1;
  CloseReason reason = 2;
  string buyer = 3; // present when reason == SOLD
  Money sale_price = 4; // present when reason == SOLD
}

message BidPlaced {
  Bid bid = 1;
}

message BidAccepted {
  string bid_id    = 1;
  string listing_id = 2;
  Money  sale_price = 3;
}

//--------------------------------------------------------------------
// REQUEST / RESPONSE MESSAGES
//--------------------------------------------------------------------

message ListNftRequest {
  NftId nft      = 1;
  Money ask_price = 2;          // optional, 0 for auction-only
  google.protobuf.Timestamp expires_at = 3;
  Attributes meta = 4;
}

message ListNftResponse {
  Listing listing = 1;
}

message CancelListingRequest {
  string listing_id = 1;
}

message CancelListingResponse {
  Listing listing = 1;          // Closed listing snapshot.
}

message BuyNowRequest {
  string listing_id = 1;
}

message BuyNowResponse {
  Listing listing = 1;          // Closed listing snapshot.
}

message PlaceBidRequest {
  string listing_id = 1;
  Money  amount     = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message PlaceBidResponse {
  Bid bid = 1;
}

message AcceptBidRequest {
  string bid_id = 1;
}

message AcceptBidResponse {
  Listing listing = 1;          // Closed listing snapshot.
}

message GetListingRequest {
  string listing_id = 1;
  google.protobuf.FieldMask field_mask = 98; // Sparse responses.
}

message GetListingResponse {
  Listing listing = 1;
}

message QueryListingsRequest {
  // Filter criteria (AND-ed).  Empty = all active listings.
  repeated NftId nft_ids = 1;
  repeated string seller_addrs = 2;
  Currency currency = 3;
  google.protobuf.Timestamp newer_than = 4;
  bool include_inactive = 5;
  Pagination paging = 99;
}

message QueryListingsResponse {
  repeated Listing listings = 1;
  PaginationResult paging = 2;
}

message StreamEventsRequest {
  // All fields are optional filters.
  google.protobuf.Timestamp from = 1; // exclusive
  google.protobuf.Timestamp to   = 2; // inclusive
  repeated string seller_addrs = 3;
  repeated string bidder_addrs = 4;
}

//--------------------------------------------------------------------
// SERVICE DEFINITION
//--------------------------------------------------------------------

service MarketplaceService {
  // List an NFT for sale or auction.
  rpc ListNft(ListNftRequest) returns (ListNftResponse);

  // Cancel a listing if it has no accepted bids / sale.
  rpc CancelListing(CancelListingRequest) returns (CancelListingResponse);

  // Immediate purchase (buy-now) at the ask price.
  rpc BuyNow(BuyNowRequest) returns (BuyNowResponse);

  // Place or update a bid on a listing.
  rpc PlaceBid(PlaceBidRequest) returns (PlaceBidResponse);

  // Seller accepts a specific bid; finalizes the trade.
  rpc AcceptBid(AcceptBidRequest) returns (AcceptBidResponse);

  // Fetch a single listing.
  rpc GetListing(GetListingRequest) returns (GetListingResponse) {
    option idempotency_level = IDEMPOTENT;
  }

  // Query multiple listings with pagination.
  rpc QueryListings(QueryListingsRequest) returns (QueryListingsResponse) {
    option idempotency_level = IDEMPOTENT;
  }

  // Subscribe to marketplace events (server streaming).
  rpc StreamEvents(StreamEventsRequest) returns (stream TradeEvent);
}

//--------------------------------------------------------------------
// RESERVATIONS (prevent accidental reuse of tag numbers)
//--------------------------------------------------------------------

message ListNftRequest {
  reserved 5 to 20;
}

message CancelListingRequest {
  reserved 2 to 20;
}

message BuyNowRequest {
  reserved 2 to 20;
}

message QueryListingsRequest {
  reserved 6 to 98;
}